--- a/随笔/创建数组的方式.md
+++ b/随笔/创建数组的方式.md
@@ -41,16 +41,18 @@ console.log(arr7) // [1,2,3]
 console.log(arr8) // ["a", "b", "c"]
 ```
 
-# 5. `Array.prototype.slice`
+## `Array.prototype.slice`
 ```js
 const arr9 = Array.prototype.slice.call([1, 2])
 
 console.log(arr9) // [1, 2]
 ```
 
-# 6. `Array.prototype.concat`
+## `Array.prototype.concat`
 ```js
 const arr10 = Array.prototype.concat.call([], [1, 2, 3])
 
 console.log(arr10) // [1,2,3]
 ```
+
+## 
