--- a/随笔/前端宿主浏览器.md
+++ b/随笔/前端宿主浏览器.md
@@ -56,6 +56,7 @@
 - 解析文档遇到 img 先解析节点，创建加载线程异步加载图片资源，不阻塞解析文档
 - 文档解析完成 defer script 再开始执行
 - 文档解析完成 DOMContentLoaded 事件
-- 
+- 进入事件驱动阶段
+- async script 加载执行完毕，img 等资源加载完毕，onload事件触发
 
 
